--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "title": "Hux Blog",
     "author": "Hux <huxpro@gmail.com>",
     "version": "1.7.0",
-    "homepage": "http://huxpro.github.io",
+    "homepage": "http://kongweiteng.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/Huxpro/huxpro.github.io"
+        "url": "https://github.com/kongweiteng/kongweiteng.github.io"
     },
     "bugs": "https://github.com/Huxpro/huxpro.github.io/issues",
     "devDependencies": {
