--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
-    "author": "Hux <huxpro@gmail.com>",
+    "name": "kongweiteng-blog",
+    "title": "kongweiteng Blog",
+    "author": "kongweiteng <kongweiteng@sina.com>",
     "version": "1.7.0",
     "homepage": "http://kongweiteng.github.io",
     "repository": {
