--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ ga_domain: huangxuan.me
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "If we sail against the current, we will not retreat.<br>行如逆水行舟，不进则退<br>kongweiteng@sina.com"
-sidebar-avatar: /img/avatar-kwt-ny.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/kongweitengweixindyh.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
